# alignment

./: .gitignore  .gitmodules  AlignmentConfig.py  ColorfulPrint.py  Config.py  MIGRATION.md  MIGRATION_cn.md  README.md  README_cn.md  README_en.md  RawList.py  STORAGE_GUIDE.md  STORAGE_GUIDE_cn.md  USAGE_GUIDE.md  USAGE_GUIDE_cn.md  auto_iter.py  auto_iter_test.py  config.json  config.py  config.yaml  dag_manager.py  draw_chi2_hist.py  env.sh  faser_reco_alignment.py  main.py  millepede_condor_env.sh  reco_condor_env.sh  runAlignment.py  runAlignment.sh  setup_config.sh  submit_unbiased.sub
Analysis/: Analyser.py  BranchInfo.py  CMakeLists.txt  Dataset.py  main.py
Analysis/include/: Analyser.hpp  BranchInfo.hpp
Analysis/src/: Analyser.cpp  main.cpp
Workflow/: Alg.py  AlignmentSet.py  BinAlg.py  FixRule.py  Label.py  MergeAlg.py  ParamIO.py  ParamReader.py  PedeAlg.py  PedeStep.py  millepede.py
discarded/2025-11-09_daemon_iter/: README.md  submit_unbiased.sub
discarded/2026-03-04_custom_pydantic/: AlignmentConfig.py  Config.py
discarded/2026-03-05_json_config/: AlignmentConfig.py  Config.py  config.json
logs/: job_10256290_0.err  job_10256290_0.out  job_10256290_1.err  job_10256290_1.out  job_10256290_32.err  job_10256290_32.out
millepede/: CMakeLists.txt  README.md
millepede/argparse/: CMakeLists.txt
millepede/oscar_template/: 3STpresigma.txt  3STpresigma_another_ss_v3.txt  3STpresigma_ss_v3.txt  Fix3Layer.txt  Fix3Layer_ss.txt  Fixanotherlayers.txt  FixfromResult.cpp  Fixfromstep1_v3.cpp  IFTpresigma.txt  IFTpresigma_another_ss.txt  IFTpresigma_ss.txt  PedetoArray.cpp  PedetoDB.cpp  addparam_sim.sh  convert2mille_v2.C  convert2mille_v2_ss.C  getconstantlist.sh  makeFixAnotherLayers.sh  makeFixAnotherLayers_v3.sh  millepede.end  millepede.end~  millepede.his  millepede.his~  millepede.log~  millepede.mon  millepede.mon~  millepede.res  millepede.res~  mp2con-noIFT_another_ss_v3.txt  mp2con-withIFT.txt  mp2con-withIFT_ss.txt  mp2confaser_IFT_station.txt  mp2str-beamtest-SP.txt  mp2str-noIFT-2layersfixed.txt  mp2str-noIFT_v2.txt  mp2str-withIFT-2layersfixed_v2_ss.txt  mp2str-withIFT-2layersfixed_v3_ss.txt  mp2str-withIFT-IFTmove.txt  mp2str-withIFT-IFTmove_v2.txt  mp2str-withIFT-IFTmove_v2_ss.txt  (+8 more)
millepede/src/: Fixfromstep1.cpp  Fixfromstep2.cpp  PedetoDB_ss.cpp  add_param.cpp  main.cpp  millepede_temp.py
millepede/txt/: 3STpresigma_4ST_ss.txt  mp2con-noIFT_4ST_ss.txt  mp2par-IFT_fixlayer_ss.txt  mp2par-IFT_fixside_ss.txt  mp2str-IFT_fixlayer_ss.txt  mp2str-IFT_fixside_ss.txt  mp2str-noIFT-2layersfixed_v2_ss.txt  mp2str-noIFT-2layersfixed_v2_ss_4ST.txt  mp2str-noIFT-3STlayersfixed_v2_ss_4ST.txt
smalltask/: InputAlign.py  align-2025.txt  main.py
templates/: WriteAlignmentConfig_Faser01.py  WriteAlignmentConfig_Faser02.py  WriteAlignmentConfig_Faser03.py  WriteAlignmentConfig_Faser04.py  WriteAlignmentConfig_Faser05.py  align_2022_3ST.txt  align_2022_4ST_local.txt  aligndb_copy.sh  aligndb_template_head.sh  aligndb_template_tail.sh  inputforalign.txt  mille.sub.tpl  mille_env.sh  mp2con_ss.txt  mp2par_ss.txt  mp2str_ss.txt  reco.sub.tpl  runAlignment.sh  runMillepede.sh
tests/: README.md  test_config.py  test_dag_generation.py  test_integration.sh  test_mermaid_diagrams.py  test_reco_local.sh
